--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "mongoose": "^4.4.14",
     "superagent": "^1.8.3"
   },
   "devDependencies": {},
