--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "mongojs": "^2.4.0",
     "mongoose": "^4.4.14",
     "superagent": "^1.8.3"
   },
